gui application created

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,23 +6,32 @@ spring:
       hibernate:
         globally_quoted_identifiers: true
     open-in-view: false
+    hibernate:
+      naming:
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
   datasource:
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
     url: jdbc:sqlserver://0.tcp.jp.ngrok.io:14080
     username: unicool
     password: unicool
+  #    url: jdbc:sqlserver://192.168.0.27:1433
   h2:
     console:
       enabled: true
   profiles:
     include: oauth
   session:
-    store-type: none
+    store-type: redis
   mustache:
     cache: false
   devtools:
     livereload:
       enabled: true
+  redis:
+    host: localhost
+    port: 6379
 logging:
   level:
     web: debug
+#    org.springframework.security: debug
