--- a/build.gradle
+++ b/build.gradle
@@ -27,14 +27,16 @@ repositories {
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    implementation("org.springframework.boot:spring-boot-starter-jdbc")
+//    implementation("org.springframework.boot:spring-boot-starter-jdbc")
     implementation("org.springframework.boot:spring-boot-starter-mustache")
     implementation("com.h2database:h2")
-    implementation("org.projectlombok:lombok")
     implementation("com.microsoft.sqlserver:mssql-jdbc")
     implementation("org.springframework.boot:spring-boot-devtools")
     implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
-    implementation("org.springframework.session:spring-session-jdbc")
+//    implementation("org.springframework.session:spring-session-jdbc")
+    implementation("org.springframework.session:spring-session-data-redis")
+    implementation("redis.clients:jedis")
+    implementation("org.projectlombok:lombok")
     annotationProcessor("org.projectlombok:lombok")
     testAnnotationProcessor("org.projectlombok:lombok")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
