--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 /src/main/resources/application-oauth.yml
+/src/main/resources/application-production.yml
