--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ notifications:
       - khskeb0513@gmail.com
 
 before_deploy:
-  - zip -r busanhs-spring1
+  - zip -r busanhs-spring1 *
   - mkdir -p deploy
   - mv busanhs-spring1.zip deploy/busanhs-spring1
 
