--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ notifications:
 before_deploy:
   - zip -r busanhs-spring1 *
   - mkdir -p deploy
-  - mv busanhs-spring1.zip deploy/busanhs-spring1
+  - mv busanhs-spring1.zip deploy/busanhs-spring1.zip
 
 deploy:
   - provider: s3
