to auto starting deploy.sh when git pushed.

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,6 +1,19 @@
 version: 0.0
 os: linux
+
 files:
   - source:  /
     destination: /home/ubuntu/app/step2/zip/
     overwrite: yes
+
+permissions:
+  - objects:  /
+    pattern: "**"
+    owner: ubuntu
+    group: ubuntu
+
+hooks:
+  ApplicationStart:
+    - location: deploy.sh
+      timeout: 60
+      runas: ubuntu
