--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,12 @@ notifications:
       - khskeb0513@gmail.com
 
 before_deploy:
-  - zip -r busanhs-spring1 *
-  - mkdir -p deploy
+  - mkdir -p before-deploy
+  - cp scripts/* before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar defore-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
   - mv busanhs-spring1.zip deploy/busanhs-spring1.zip
 
 deploy:
