--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_deploy:
   - mkdir -p before-deploy
   - cp scripts/* before-deploy/
   - cp appspec.yml before-deploy/
-  - cp build/libs/*.jar defore-deploy/
+  - cp build/libs/*.jar before-deploy/
   - cd before-deploy && zip -r before-deploy *
   - cd ../ && mkdir -p deploy
   - mv busanhs-spring1.zip deploy/busanhs-spring1.zip
