--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,13 @@ notifications:
 
 before_deploy:
   - mkdir -p before-deploy
-  - cp scripts/* before-deploy/
+  - cp scripts/*.sh before-deploy/
   - cp appspec.yml before-deploy/
   - cp build/libs/*.jar before-deploy/
   - cd before-deploy && zip -r before-deploy *
-  - cd ../ && mkdir -p deploy
-  - mv busanhs-spring1.zip deploy/busanhs-spring1.zip
+  - cd ../
+  - mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/busanhs-spring1.zip
 
 deploy:
   - provider: s3
