--- a/appspec.yml
+++ b/appspec.yml
@@ -2,12 +2,12 @@ version: 0.0
 os: linux
 
 files:
-  - source:  /
+  - source: "/"
     destination: /home/ubuntu/app/step2/zip/
     overwrite: yes
 
 permissions:
-  - objects:  /
+  - object: "/"
     pattern: "**"
     owner: ubuntu
     group: ubuntu
